# bifrost_seqsero

./: Dockerfile  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: docker_build_and_push_to_dockerhub.yml
bifrost_seqsero/: __init__.py  __main__.py  conda.smk  config.yaml  datadump.py  launcher.py  pipeline.smk
envs/: SeqSero.linux-64.pin.txt  SeqSero.yaml
tests/: test_simple.py
