[bumpversion]
current_version = v1_0_0__
parse = (v(?P<major>\d+))(_(?P<minor>\d+))(_(?P<patch>\d+)__)
serialize = v{major}_{minor}_{patch}__
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrost_seqsero/config.yaml]
search = {current_version}
replace = {new_version}

[bumpversion:file:bifrost_seqsero/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:tests/test_simple.py]
search = component_name = "seqsero__{current_version}"
replace = component_name = "seqsero__{new_version}"

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = 
	tests
